tests/errors/void_return_value.ptt
foo() { give 42 }
spark { foo() }
